// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots of EquipmentListItem component EquipmentListItem snapshot with admin view 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-2 w-full justify-between group"
  >
    <div
      class="flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-uks7c6-MuiSvgIcon-root"
        data-testid="laptop-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 18c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2H0v2h24v-2zM4 6h16v10H4z"
        />
      </svg>
      <div
        class="flex flex-col"
      >
        <p
          class="text-zinc-900"
        >
          MacBook Pro
        </p>
        <p
          class="text-zinc-500 text-sm"
        >
          Laptop
        </p>
      </div>
    </div>
    <p
      class="text-zinc-500 text-sm"
    >
      20 Mar 2024
    </p>
    <div
      class="flex items-center gap-2"
    >
      <div
        class="bg-cyan-600 py-1 px-3 w-fit undefined flex items-center justify-center rounded-lg"
      >
        <span
          class="text-sm text-warmstone-50"
        >
          Good
        </span>
      </div>
      <button
        aria-label="edit"
        class="bg-zinc-500 text-zinc-50 border-2 border-zinc-500 hover:bg-zinc-900 hover:text-zinc-50 hover:border-zinc-900 flex items-center justify-center h-8 w-8 rounded-full cori-btn hidden group-hover:flex transition-all duration-300 btn btn-primary"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
          data-testid="EditIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
          />
        </svg>
      </button>
      <button
        aria-label="unlink"
        class="bg-transparent text-red-500 border-2 border-red-500 hover:border-red-700 hover:text-red-700 flex items-center justify-center h-8 w-8 rounded-full cori-btn hidden group-hover:flex transition-all duration-300 btn btn-outline-primary"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
          data-testid="LinkOffIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 7h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1 0 1.43-.98 2.63-2.31 2.98l1.46 1.46C20.88 15.61 22 13.95 22 12c0-2.76-2.24-5-5-5m-1 4h-2.19l2 2H16zM2 4.27l3.11 3.11C3.29 8.12 2 9.91 2 12c0 2.76 2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1 0-1.59 1.21-2.9 2.76-3.07L8.73 11H8v2h2.73L13 15.27V17h1.73l4.01 4L20 19.74 3.27 3z"
          />
        </svg>
      </button>
      <button
        aria-label="delete"
        class="bg-red-500 text-white border-2 border-red-500 hover:bg-red-700 hover:border-red-700 flex items-center justify-center h-8 w-8 rounded-full cori-btn hidden group-hover:flex transition-all duration-300 btn btn-primary"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
          data-testid="DeleteIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snapshots of EquipmentListItem component EquipmentListItem snapshot with basic props 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-2 w-full justify-between group"
  >
    <div
      class="flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-uks7c6-MuiSvgIcon-root"
        data-testid="laptop-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 18c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2H0v2h24v-2zM4 6h16v10H4z"
        />
      </svg>
      <div
        class="flex flex-col"
      >
        <p
          class="text-zinc-900"
        >
          MacBook Pro
        </p>
        <p
          class="text-zinc-500 text-sm"
        >
          Laptop
        </p>
      </div>
    </div>
    <p
      class="text-zinc-500 text-sm"
    >
      20 Mar 2024
    </p>
    <div
      class="flex items-center gap-2"
    >
      <div
        class="bg-cyan-600 py-1 px-3 w-fit undefined flex items-center justify-center rounded-lg"
      >
        <span
          class="text-sm text-warmstone-50"
        >
          Good
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
